syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.homo.game.client.msg.proto";
option java_outer_classname = "UserMsg";

package msg;

//用户信息
message UserInfo{
  string userId = 1;
  string phone = 2;
  string nickName = 3;
  int32 age = 4;
  int32 sex = 5;    //性别  0男 1女
  string sign = 6;
  string birthday = 7;
  string avatar = 8;
  string identityId = 9;
  string identityName = 10;
  int32 level = 11;
  float totalCharge = 12;
  int32 groupValue = 13;  // 成长值
  string imei = 14;                                                //imei
  string platform = 15;                                            //系统类型 ios or android
  string deviceType = 16;                                          //手机型号
  string token = 17;
  int64 registerTime = 18;
  int64 inMemberTime = 19;
  int64 lastLoginTime = 20;
  int64 lastChargeTime = 21;
  repeated Address addresses = 22;
  repeated BindGame bindGames = 23; //可选绑定列表
  repeated BindGame hadBindGames = 24;  //已绑定列表

  int64 deadlineDay = 25; // 成长值最后期限
}

//游戏绑定信息
message BindGame{
  string appId = 1;
  string appName = 2;
  string channelId = 3;
  string gameId = 4;
  string role = 5;
  string roleId = 6;
}

//地址信息
message Address{
  string county = 1;
  string province = 2;
  string city = 3;
  string mark = 4;
}

//获取用户信息请求
message GetUserInfoReq{
  string userId = 1;
}
//获取用户信息响应
message GetUserInfoResp{
  int32 errorCode = 1;
  string errorDesc = 2;
  UserInfo userInfo = 3;
}

//创建用户请求
message CreateUserReq{
  UserInfo userInfo = 1;
}

//创建用户请求响应
message CreateUserResp{
  int32 errorCode = 1;
  string errorDesc = 2;
  UserInfo userInfo = 3;
}

